# devnotes

./: .gitignore  AGENTS.md  generate_webcomic.py  pyproject.toml  serve.py
.claude/skills/devlog/: SKILL.md
.claude/skills/sessions-discovery/: SKILL.md
.opencode/agents/: session-summary.md
.opencode/commands/: devlog-date.md
opencode-plugin/agents/: session-summary.md
opencode-plugin/commands/: daily-devnote.md  devlog-date.md  devnotes-date.md
opencode-plugin/skills/daily-devnote/: SKILL.md
opencode-plugin/skills/devnotes/: SKILL.md
opencode-plugin/skills/fetch-remote-sessions/: SKILL.md
opencode-plugin/skills/fetch-remote-sessions/scripts/: fetch_remote_sessions.sh
opencode-plugin/skills/sessions-discovery/: SKILL.md
opencode-plugin/skills/webcomic-note/: SKILL.md
scripts/: deploy-opencode-plugin.sh  undeploy-opencode-plugin.sh
src/devlog_notes/: __init__.py  build_notes_site.py  list_sessions.py  serve.py  transcript_to_markdown.py
src/devlog_notes/assets/: styles.css
src/devlog_notes/templates/: archive.html  base.html  index.html  note.html
src/devnotes/: __init__.py  build_notes_site.py  cli.py  generate_webcomic.py  list_sessions.py  serve.py  transcript_to_markdown.py
src/devnotes/assets/: styles.css
src/devnotes/templates/: archive.html  base.html  index.html  note.html
tests/: test_generate_webcomic.py
tools/: build_notes_site.py  list-sessions.py  transcript_to_markdown.py
