[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlog-notes"
version = "0.1.0"
description = "FastAPI server for local markdown devlog notes"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "markdown-it-py>=4.0.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
devlog-notes = "devlog_notes.serve:main"
devlog-build-site = "devlog_notes.build_notes_site:main"
devlog-list-sessions = "devlog_notes.list_sessions:main"
devlog-transcript-to-markdown = "devlog_notes.transcript_to_markdown:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
