[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devnotes"
version = "0.1.0"
description = "FastAPI server for local markdown devnotes"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "markdown-it-py>=4.0.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
devnotes = "devnotes.serve:main"
devnotes-build-site = "devnotes.build_notes_site:main"
devnotes-list-sessions = "devnotes.list_sessions:main"
devnotes-transcript-to-markdown = "devnotes.transcript_to_markdown:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devnotes = ["templates/*.html", "assets/*.css"]
