[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devnotes"
version = "0.1.0"
description = "FastAPI server for local markdown devnotes"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "markdown-it-py>=4.0.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
devnotes = "devnotes.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devnotes = ["templates/*.html", "assets/*.css"]
